kubernetes/k3s-prod-a/prowlarr/ingress-route.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prowlarr
  namespace: torrenting
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`prowlarr.l.47fc5c.com`)
      kind: Rule
      services:
        - name: prowlarr
          kind: Service
          port: 9696
          scheme: http
          sticky:
            cookie:
              httpOnly: true
              secure: true
              sameSite: none
  tls:
    secretName: prowlarr-certificate
